www/docs/style/sass/app.scss
// Global Foundation Settings
@import "settings";

// Comment out this import if you don't want to use normalize
@import "normalize";

// Comment out this import if you are customizing you imports below
@import "foundation";

@import "ms_header";

@import url(http://fonts.googleapis.com/css?family=Lato:700|Open+Sans&subset=latin,latin-ext);

// this is from old stylesheets
.printonly {
    @extend .print-only;
}

a, a:hover, a:active {
    color: $links;
}

ul {
    list-style-type: none;
}

.top-bar {
    .right {
        background-color: $brand;
    }
}

.top-bar-section ul li a:not(.button) {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

.panel-row {
    @extend .row;
    padding-top: 1.25em;
    padding-bottom: 1.25em;
    border-style: solid;
    border-width: 1px;
    border-color: #e6e6e6;
    margin-bottom: 1.25em;
    background: white;
}

.panel {
    h2 {
        padding-bottom: 0.5em;
        border-bottom: 1px dotted $borders;
    }
}

.sidebar {
    font-family: 'Opens Sans', sans-serif;
    font-size: em-calc(14);
    color: #666666;

    p, ul, h4, a {
        font-size: em-calc(14);
    }

    h4 {
        color: #333333;
    }

    ul {
        list-style-type: none;
    }
}

.morelink {
    text-align: right;
}

.infolink {
    text-align: right;
}

#main-content {
    padding-left: 0px;
}

#footer {
    clear: both;
    margin-top: 1em;
    padding-top: 1em;
    background-color: $brand;
    div.columns {
        font-size: 0.8em;
    }
    a, a:hover, a:active {
        color: white;
        text-decoration: underline;
        text-decoration-style: dotted;
        -moz-text-decoration-style: dotted;
        -webkit-text-decoration-style: dotted;
    }
    dl {
        dt {
            float: left;
            clear: left;
            font-weight: bold;
            width: 13em;
        }
        dd {
            float: left;
            max-width: 40em;
            li {
                margin-bottom: 0px;
                display: inline-block;
            }
            li {
                padding-right: 0.25em;
            }
        }
    }
}

#mp-panel {
    .person, .mp-details {
        float: left;
    }
    .mp-details {
        margin-left: 1em;
    }

    @media only screen and ( max-width: 500px ) {
        .person {
            width: 100%;
            text-align: center;
        }
    }
}

// Vote record
#dreamcomparisons {
    margin-bottom: 0px;
    li {
        border-top: 1px dotted $borders;
        line-height: 2;
        .votepolicylink {
            float: right;
        }
        &:last-child {
            border-bottom: 1px dotted $borders;
        }
    }
}


// Recent appearances
#searchresults {
    dt {
        a {
            text-decoration: underline;
            text-decoration-style: dotted;
            -moz-text-decoration-style: dotted;
            -webkit-text-decoration-style: dotted;
        }
    }
    dd {
        border-bottom: 1px dotted $borders;
        .appearance-date {
            font-weight: bold;
            .day {
                display: inline-block;
                border: 1px solid $borders;
                border-right: none;
            }
            .month {
                display: inline-block;
                color: white;
                background-color: $brand;
                border: 1px solid $borders;
                padding-left: 0.2em;
                padding-right: 0.2em;
            }
        }
        @media #{$small} {
            .appearance-date {
                min-width: 4em;
                float: left;
                text-align: center;
                margin-right: em-calc(16);
                .day {
                    display: block;
                    border-right: 1px solid $borders;
                    border-bottom: none;
                }
                .month {
                    display: block;
                }
            }
            p {
                margin-left: 5em;
            }
        }
    }
}

// members interests
.regmemcategory {
    font-weight: bold;
    margin-top: em-calc(16);
    margin-bottom: em-calc(8);
    border-bottom: 1px dotted $borders;

    &:nth-of-type(1) {
        margin-top: 0px;
    }
}

.regmemitem {
    margin-bottom: em-calc(8);
    margin-left: 1em;
}

.person-button-column {
    @extend .columns;
}

.person-contact-button {
    @include button-base;
    @include button-size(emCalc(12), true);
    @include button-style($alert-color, 4px);

    text-align: left;
    padding: em-calc(8);
    box-shadow: none;
    -webkit-box-shadow: none;
    strong {
        display: block;
    }
    small {
        font-size: 0.9em;
        display: block;
        font-weight: normal;
    }
}

#mp-panel {
    padding-bottom: 0px;
    margin-bottom: 0px;
    h1 {
        line-height: 1;
        margin-top: 0px;
        margin-bottom: 0.2em;
    }

    h3 {
        margin-top: 0px;
        font-weight: 100;
    }
}

.person-subnav {
    min-width: 0px;
    max-width: $row-width;
    width: 100%;
    padding: 0px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    border: 1px solid $borders;
    border-top: 1px solid $panel-bg;

    .sub-nav {
        @include sub-nav($sub-nav-font-color, $sub-nav-font-size, $panel-bg);

        margin-left: 0px;
        margin-bottom: 0px;

        dt {
            margin: 0px;
            padding: 8px;
            border-right: 1px solid $borders;
            &.active {
                border-bottom: 3px solid $brand;
                a {
                    color: $body-font-color;
                }
            }
        }
    }
}

